# Erox-Lang

./: Cargo.toml  project_structure.md
.github/workflows/: rust.yml
code_tests/: async_await_test.erx  index.erx  test_methods.erx  test_stdlib.erx  test_trycatch.erx
src/: lib.rs  main.rs
src/compiler/: codegen.rs  diagnostics.rs  lexer.rs  parser.rs
src/vm/: machine.rs  object.rs  opcodes.rs
tests/: lexer_tests.rs
