[package]
name = "erox"
version = "0.5.0"
edition = "2024"

[lib]
name = "erox_lib"
path = "src/lib.rs"

[[bin]]
name = "erox"
path = "src/main.rs"

[dependencies]
criterion = "0.8.2"
env_logger = "0.11.10"
log = "0.4.29"
tokio = { version = "1.52.1", features = ["full"] }
reqwest = { version = "0.13.3", features = ["blocking"] }
serde_json = "1.0.149"
md-5 = "0.11.0"
sha2 = "0.11.0"
base64 = "0.22.1"
rand = "0.10.1"
